Fixed text-align

--- a/src/ComponentStyles/AboutUs.css
+++ b/src/ComponentStyles/AboutUs.css
@@ -1,3 +1,3 @@
-p {
+.about-us p {
     text-align: center;
 }
